err/avwx-engine.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/avwx'...
Compiling './lib/python3.5/site-packages/avwx/__init__.py'...
***   File "./lib/python3.5/site-packages/avwx/__init__.py", line 28
    last_updated: datetime = None
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avwx/remarks.py'...
***   File "./lib/python3.5/site-packages/avwx/remarks.py", line 14
    return f"{'-' if code[0] == '1' else ''}{int(code[1:3])}.{code[3]}°{unit}"
                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avwx/service.py'...
***   File "./lib/python3.5/site-packages/avwx/service.py", line 18
    url: str = None
       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/avwx_engine-0.11.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
